--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\FollowPlayer.cs" />
      <Compile Include="Assets\Gun.cs" />
+     <Compile Include="Assets\Health.cs" />
      <Compile Include="Assets\SMC Pack 1\Demo\Files\V_SMC_Camera.cs" />
      <Compile Include="Assets\SMC Pack 1\Demo\Files\V_SMC_Handler.cs" />
      <Compile Include="Assets\SMC Pack 1\Demo\Files\V_Text.cs" />
