--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Gun.cs" />
      <Compile Include="Assets\Health.cs" />
      <Compile Include="Assets\MainMenu.cs" />
+     <Compile Include="Assets\NextLeve.cs" />
      <Compile Include="Assets\OptionsMenu.cs" />
      <Compile Include="Assets\SMC Pack 1\Demo\Files\V_SMC_Camera.cs" />
      <Compile Include="Assets\SMC Pack 1\Demo\Files\V_SMC_Handler.cs" />
